@@ -1,3 +1,7 @@
+2002-08-27  Xavier Garreau <xgarreau@club-internet.fr>
+
+	* src/boards/memory.c: fixed a potential random bug at level 5 or above
+
 2002-08-23  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* boards/mastermind.xml.in: new board by bruno
